colab minimamente funcional

--- a/colab-runner.ipynb
+++ b/colab-runner.ipynb
@@ -56,8 +56,10 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": [
         "import os\n",
         "import subprocess\n",
@@ -81,17 +83,18 @@
         "assert make_result.returncode == 0, \"Erro na compilação (make)\"\n",
         "\n",
         "\n",
-        "# Lista de imagens de teste\n",
         "test_images = [\n",
-        "    \"img/city.png\",\n",
-        "    \"img/baboon_colorida.png\",\n",
-        "    \"img/monalisa.png\",\n",
-        "    \"img/seagull.png\",\n",
-        "    \"img/butterfly.png\"\n",
+        "    \"img/ppm/city.ppm\",\n",
+        "    # \"img/ppm/baboon_colorida.ppm\",\n",
+        "    # \"img/ppm/monalisa.ppm\",\n",
+        "    # \"img/ppm/seagull.ppm\",\n",
+        "    # \"img/ppm/butterfly.ppm\"\n",
         "]\n",
         "\n",
+        "\n",
         "# Modos de dithering suportados\n",
-        "modos = [\"FloydSteinberg\", \"StevensonArce\", \"Burkes\", \"Sierra\", \"Stucki\", \"JarvisJudiceNinke\"]\n",
+        "modos = [\"FloydSteinberg\"]\n",
+        "# modos = [\"FloydSteinberg\", \"StevensonArce\", \"Burkes\", \"Sierra\", \"Stucki\", \"JarvisJudiceNinke\"]\n",
         "\n",
         "# Executar os testes\n",
         "for i, image in enumerate(test_images, start=1):\n",
@@ -105,16 +108,25 @@
         "\n",
         "        subprocess.run(f\"chmod +x {exec_path}\", shell=True)\n",
         "\n",
-        "        command = f\"/usr/bin/time -f '%e' {exec_path} -i {img_path} -m {modo} -g > /dev/null 2> {time_file}\"\n",
+        "        command = f\"{exec_path} -i {img_path} -m {modo} -g\"\n",
         "        print(f\"Running: {command}\")\n",
-        "        run = subprocess.run(command, shell=True, cwd=exercise_dir)\n",
+        "        \n",
+        "        run = subprocess.run(command, shell=True, cwd=exercise_dir, \n",
+        "                           stdout=subprocess.PIPE, stderr=subprocess.PIPE,\n",
+        "                           text=True)\n",
+        "\n",
+        "        print(\"\\n=== Saída do programa (stdout) ===\")\n",
+        "        print(run.stdout)\n",
+        "        \n",
+        "        print(\"\\n=== Logs do programa (stderr) ===\")\n",
+        "        print(run.stderr)\n",
         "\n",
         "        if os.path.exists(time_file):\n",
         "            with open(time_file) as f:\n",
         "                runtime = f.read().strip()\n",
-        "            print(f\"Tempo de execução: {runtime} segundos\")\n",
+        "            print(f\"\\nTempo de execução: {runtime} segundos\")\n",
         "        else:\n",
-        "            print(f\"Falha ao medir tempo para {image} no modo {modo}\")\n"
+        "            print(f\"\\nFalha ao medir tempo para {image} no modo {modo}\")"
       ]
     }
   ],
