[colab] update novo dataset

--- a/colab-runner.ipynb
+++ b/colab-runner.ipynb
@@ -64,15 +64,17 @@
         "import os\n",
         "import subprocess\n",
         "\n",
-        "# Caminhos principais\n",
+        "# Diretórios principais\n",
         "base_dir = os.getcwd()\n",
         "exercise_dir = os.path.join(base_dir, \"repositorio\")\n",
         "build_dir = os.path.join(exercise_dir, \"build\")\n",
+        "input_base_dir = os.path.join(base_dir, \"img\", \"ppm\")\n",
+        "output_base_dir = os.path.join(exercise_dir, \"out\")\n",
         "\n",
-        "# Função para executar comandos de shell\n",
+        "# Função para executar comandos shell\n",
         "def run_command(command, work_dir):\n",
         "    return subprocess.run(\n",
-        "        command, shell=True, cwd=work_dir, \n",
+        "        command, shell=True, cwd=work_dir,\n",
         "        text=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE\n",
         "    )\n",
         "\n",
@@ -88,47 +90,54 @@
         "print(\"CMAKE STDERR:\\n\", cmake_result.stderr)\n",
         "assert cmake_result.returncode == 0, \"Erro na configuração com CMake\"\n",
         "\n",
-        "# Compilar com make\n",
+        "# Ajustar input_base_dir para ser relativo ao exercise_dir\n",
+        "input_base_dir = os.path.join(exercise_dir, \"..\", \"img\", \"ppm\")\n",
+        "input_base_dir = os.path.abspath(input_base_dir)\n",
         "print(\"🧱 Compilando com make...\")\n",
         "make_result = run_command(\"make -j\", build_dir)\n",
         "print(\"MAKE STDOUT:\\n\", make_result.stdout)\n",
         "print(\"MAKE STDERR:\\n\", make_result.stderr)\n",
         "assert make_result.returncode == 0, \"Erro na compilação (make)\"\n",
         "\n",
-        "# Lista de imagens de teste (ppm)\n",
-        "test_images = [\n",
-        "    # \"img/ppm/city.ppm\",\n",
-        "    # \"img/ppm/baboon_colorida.ppm\",\n",
-        "    \"img/ppm/monalisa.ppm\",\n",
-        "    # \"img/ppm/seagull.ppm\",\n",
-        "    # \"img/ppm/butterfly.ppm\"\n",
-        "]\n",
+        "# Encontrar todas as imagens ppm no dataset img/ppm e subpastas\n",
+        "test_images = []\n",
+        "for root, dirs, files in os.walk(input_base_dir):\n",
+        "    for file in files:\n",
+        "        if file.endswith(\".ppm\"):\n",
+        "            full_path = os.path.join(root, file)\n",
+        "            # Caminho relativo em relação a input_base_dir\n",
+        "            rel_path = os.path.relpath(full_path, input_base_dir)\n",
+        "            test_images.append(rel_path)\n",
         "\n",
-        "output_dir = os.path.join(exercise_dir, 'out')\n",
-        "os.makedirs(output_dir, exist_ok=True)\n",
+        "print(f\"🖼️ Imagens encontradas: {len(test_images)}\")\n",
         "\n",
-        "# Executar os testes\n",
-        "for i, image in enumerate(test_images, start=1):\n",
-        "    print(f\"\\n===== 🧪 Teste {i} - Imagem: {image} =====\")\n",
+        "exec_path = os.path.join(build_dir, \"fsh_cuda\")\n",
+        "subprocess.run(f\"chmod +x {exec_path}\", shell=True)\n",
         "\n",
-        "    exec_path = os.path.join(build_dir, \"fsh_cuda\")\n",
-        "    img_path = os.path.join(exercise_dir, image)\n",
-        "    time_file = os.path.join(build_dir, f\"time_{i}.txt\")\n",
+        "# Parâmetros do programa\n",
+        "p = 0.5  # parâmetro de ruído (default)\n",
+        "stochastic = 1  # usar dithering estocástico (default)\n",
+        "grayscale_flag = \"-g\"  # converter para grayscale\n",
         "\n",
-        "    # Garantir permissão de execução\n",
-        "    subprocess.run(f\"chmod +x {exec_path}\", shell=True)\n",
+        "# Executar para todas imagens\n",
+        "for i, rel_image_path in enumerate(test_images, start=1):\n",
+        "    print(f\"\\n===== 🧪 Teste {i} - Imagem: {rel_image_path} =====\")\n",
         "\n",
-        "    # Montar e executar comando do programa\n",
-        "    # Definir parâmetros de saída e opções\n",
-        "    p = 0.5  # parâmetro de ruído (default)\n",
-        "    stochastic = 1  # usar dithering estocástico (default)\n",
-        "    grayscale_flag = \"-g\"  # converter para grayscale\n",
-        "    output_image = img_path.replace(\"img/\", \"out/\")\n",
+        "    img_path = os.path.join(input_base_dir, rel_image_path)\n",
+        "    \n",
+        "    # Preparar caminho de saída mantendo subpastos\n",
+        "    output_path = os.path.join(output_base_dir, rel_image_path)\n",
+        "    output_dir = os.path.dirname(output_path)\n",
+        "    os.makedirs(output_dir, exist_ok=True)\n",
+        "\n",
+        "    # Ajustar nome do arquivo de saída\n",
         "    if stochastic:\n",
-        "        output_image = output_image.replace(\".ppm\", \"_stochastic.ppm\")\n",
+        "        output_path = output_path.replace(\".ppm\", \"_stochastic.ppm\")\n",
+        "    else:\n",
+        "        output_path = output_path.replace(\".ppm\", \".ppm\")\n",
         "\n",
-        "    # Montar comando conforme esperado pelo programa C++\n",
-        "    command = f\"{exec_path} {img_path} {output_image} {p} {stochastic} {grayscale_flag}\"\n",
+        "    # Montar comando\n",
+        "    command = f\"{exec_path} {img_path} {output_path} {p} {stochastic} {grayscale_flag}\"\n",
         "    print(f\"▶️ Executando: {command}\")\n",
         "\n",
         "    run = subprocess.run(\n",
@@ -137,19 +146,21 @@
         "        text=True\n",
         "    )\n",
         "\n",
-        "    # Mostrar resultados\n",
+        "    # Mostrar saída\n",
         "    print(\"\\n=== 📤 Saída do programa (stdout) ===\")\n",
         "    print(run.stdout)\n",
         "\n",
         "    print(\"\\n=== 🐞 Logs do programa (stderr) ===\")\n",
         "    print(run.stderr)\n",
         "\n",
+        "    # Exibir tempo de execução se existir\n",
+        "    time_file = os.path.join(build_dir, f\"time_{i}.txt\")\n",
         "    if os.path.exists(time_file):\n",
         "        with open(time_file) as f:\n",
         "            runtime = f.read().strip()\n",
         "        print(f\"\\n⏱ Tempo de execução: {runtime} segundos\")\n",
         "    else:\n",
-        "        print(f\"\\n⚠️ Falha ao medir tempo para {image}\")\n"
+        "        print(f\"\\n⚠️ Falha ao medir tempo para {rel_image_path}\")\n"
       ]
     },
     {
