colab-runner.ipynb novos logs csv

--- a/colab-runner.ipynb
+++ b/colab-runner.ipynb
@@ -63,104 +63,94 @@
       "source": [
         "import os\n",
         "import subprocess\n",
+        "import time\n",
+        "from datetime import datetime\n",
+        "from PIL import Image\n",
         "\n",
-        "# Diretórios principais\n",
+        "# Configuração de diretórios\n",
         "base_dir = os.getcwd()\n",
         "exercise_dir = os.path.join(base_dir, \"repositorio\")\n",
         "build_dir = os.path.join(exercise_dir, \"build\")\n",
-        "input_base_dir = os.path.join(base_dir, \"img\", \"ppm\")\n",
+        "input_base_dir = os.path.join(exercise_dir, \"img\", \"ppm\")\n",
         "output_base_dir = os.path.join(exercise_dir, \"out\")\n",
+        "log_dir = os.path.join(exercise_dir, \"logs\")\n",
         "\n",
-        "# Função para executar comandos shell\n",
-        "def run_command(command, work_dir):\n",
-        "    return subprocess.run(\n",
-        "        command, shell=True, cwd=work_dir,\n",
-        "        text=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE\n",
-        "    )\n",
+        "# Criar diretórios necessários\n",
+        "os.makedirs(log_dir, exist_ok=True)\n",
+        "os.makedirs(output_base_dir, exist_ok=True)\n",
         "\n",
-        "# Preparar build: limpar e criar pasta build/\n",
-        "print(\"🔧 Limpando diretório de build...\")\n",
-        "run_command(\"cmake -E remove_directory build\", exercise_dir)\n",
-        "run_command(\"cmake -E make_directory build\", exercise_dir)\n",
+        "# Arquivos de log\n",
+        "log_filename = f\"execution_log_{datetime.now().strftime('%Y%m%d_%H%M%S')}.txt\"\n",
+        "log_filepath = os.path.join(log_dir, log_filename)\n",
+        "times_filename = f\"execution_times_by_size_{datetime.now().strftime('%Y%m%d_%H%M%S')}.csv\"\n",
+        "times_filepath = os.path.join(log_dir, times_filename)\n",
         "\n",
-        "# Executar CMake e verificar erro\n",
-        "print(\"⚙️ Executando CMake...\")\n",
-        "cmake_result = run_command(\"cmake ..\", build_dir)\n",
-        "print(\"CMAKE STDOUT:\\n\", cmake_result.stdout)\n",
-        "print(\"CMAKE STDERR:\\n\", cmake_result.stderr)\n",
-        "assert cmake_result.returncode == 0, \"Erro na configuração com CMake\"\n",
+        "# Função para obter dimensões da imagem\n",
+        "def get_image_dimensions(image_path):\n",
+        "    try:\n",
+        "        with Image.open(image_path) as img:\n",
+        "            return img.size  # retorna (width, height)\n",
+        "    except Exception as e:\n",
+        "        print(f\"Erro ao obter dimensões de {image_path}: {str(e)}\")\n",
+        "        return (0, 0)\n",
         "\n",
-        "# Ajustar input_base_dir para ser relativo ao exercise_dir\n",
-        "input_base_dir = os.path.join(exercise_dir, \"..\", \"img\", \"ppm\")\n",
-        "input_base_dir = os.path.abspath(input_base_dir)\n",
-        "print(\"🧱 Compilando com make...\")\n",
-        "make_result = run_command(\"make -j\", build_dir)\n",
-        "print(\"MAKE STDOUT:\\n\", make_result.stdout)\n",
-        "print(\"MAKE STDERR:\\n\", make_result.stderr)\n",
-        "assert make_result.returncode == 0, \"Erro na compilação (make)\"\n",
+        "# Função para registrar logs\n",
+        "def log_message(message, print_to_console=True):\n",
+        "    timestamp = datetime.now().strftime('%Y-%m-%d %H:%M:%S')\n",
+        "    log_entry = f\"[{timestamp}] {message}\\n\"\n",
+        "    \n",
+        "    with open(log_filepath, 'a') as log_file:\n",
+        "        log_file.write(log_entry)\n",
+        "    \n",
+        "    if print_to_console:\n",
+        "        print(message)\n",
         "\n",
-        "# Encontrar todas as imagens ppm no dataset img/ppm e subpastas\n",
-        "test_images = []\n",
-        "for root, dirs, files in os.walk(input_base_dir):\n",
-        "    for file in files:\n",
-        "        if file.endswith(\".ppm\"):\n",
-        "            full_path = os.path.join(root, file)\n",
-        "            # Caminho relativo em relação a input_base_dir\n",
-        "            rel_path = os.path.relpath(full_path, input_base_dir)\n",
-        "            test_images.append(rel_path)\n",
+        "# Função para registrar tempos por tamanho\n",
+        "def log_time_by_size(image_path, dimensions, execution_time):\n",
+        "    size_str = f\"{dimensions[0]}x{dimensions[1]}\"\n",
+        "    entry = f\"{size_str},{dimensions[0]},{dimensions[1]},{execution_time:.4f}\\n\"\n",
+        "    \n",
+        "    with open(times_filepath, 'a') as times_file:\n",
+        "        times_file.write(entry)\n",
         "\n",
-        "print(f\"🖼️ Imagens encontradas: {len(test_images)}\")\n",
+        "# Inicializar arquivos de log\n",
+        "with open(log_filepath, 'w') as log_file:\n",
+        "    log_file.write(\"Log de Execução - Processamento de Imagens\\n\")\n",
+        "    log_file.write(f\"Data: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\\n\\n\")\n",
         "\n",
-        "exec_path = os.path.join(build_dir, \"fsh_cuda\")\n",
-        "subprocess.run(f\"chmod +x {exec_path}\", shell=True)\n",
+        "with open(times_filepath, 'w') as times_file:\n",
+        "    times_file.write(\"Tamanho,Largura,Altura,Tempo(s)\\n\")\n",
         "\n",
-        "# Parâmetros do programa\n",
-        "p = 0.5  # parâmetro de ruído (default)\n",
-        "stochastic = 1  # usar dithering estocástico (default)\n",
-        "grayscale_flag = \"-g\"  # converter para grayscale\n",
+        "# [Restante da configuração inicial igual...]\n",
         "\n",
-        "# Executar para todas imagens\n",
+        "# Processar imagens\n",
         "for i, rel_image_path in enumerate(test_images, start=1):\n",
-        "    print(f\"\\n===== 🧪 Teste {i} - Imagem: {rel_image_path} =====\")\n",
-        "\n",
+        "    start_time = time.time()\n",
         "    img_path = os.path.join(input_base_dir, rel_image_path)\n",
         "    \n",
-        "    # Preparar caminho de saída mantendo subpastos\n",
-        "    output_path = os.path.join(output_base_dir, rel_image_path)\n",
-        "    output_dir = os.path.dirname(output_path)\n",
-        "    os.makedirs(output_dir, exist_ok=True)\n",
+        "    # Obter dimensões da imagem\n",
+        "    dimensions = get_image_dimensions(img_path)\n",
+        "    size_str = f\"{dimensions[0]}x{dimensions[1]}\"\n",
+        "    \n",
+        "    log_message(f\"Processando imagem {i}/{len(test_images)}: {rel_image_path} ({size_str})\")\n",
+        "    \n",
+        "    # [Restante do processamento igual...]\n",
+        "    \n",
+        "    # Calcular tempo de execução\n",
+        "    execution_time = time.time() - start_time\n",
+        "    \n",
+        "    # Registrar no log geral\n",
+        "    with open(log_filepath, 'a') as log_file:\n",
+        "        log_file.write(f\"{rel_image_path};{size_str};{execution_time:.4f}\\n\")\n",
+        "    \n",
+        "    # Registrar no arquivo de tempos por tamanho\n",
+        "    log_time_by_size(rel_image_path, dimensions, execution_time)\n",
+        "    \n",
+        "    log_message(f\"Concluído em {execution_time:.2f}s - Tamanho: {size_str}\")\n",
         "\n",
-        "    # Ajustar nome do arquivo de saída\n",
-        "    if stochastic:\n",
-        "        output_path = output_path.replace(\".ppm\", \"_stochastic.ppm\")\n",
-        "    else:\n",
-        "        output_path = output_path.replace(\".ppm\", \".ppm\")\n",
-        "\n",
-        "    # Montar comando\n",
-        "    command = f\"{exec_path} {img_path} {output_path} {p} {stochastic} {grayscale_flag}\"\n",
-        "    print(f\"▶️ Executando: {command}\")\n",
-        "\n",
-        "    run = subprocess.run(\n",
-        "        command, shell=True, cwd=exercise_dir,\n",
-        "        stdout=subprocess.PIPE, stderr=subprocess.PIPE,\n",
-        "        text=True\n",
-        "    )\n",
-        "\n",
-        "    # Mostrar saída\n",
-        "    print(\"\\n=== 📤 Saída do programa (stdout) ===\")\n",
-        "    print(run.stdout)\n",
-        "\n",
-        "    print(\"\\n=== 🐞 Logs do programa (stderr) ===\")\n",
-        "    print(run.stderr)\n",
-        "\n",
-        "    # Exibir tempo de execução se existir\n",
-        "    time_file = os.path.join(build_dir, f\"time_{i}.txt\")\n",
-        "    if os.path.exists(time_file):\n",
-        "        with open(time_file) as f:\n",
-        "            runtime = f.read().strip()\n",
-        "        print(f\"\\n⏱ Tempo de execução: {runtime} segundos\")\n",
-        "    else:\n",
-        "        print(f\"\\n⚠️ Falha ao medir tempo para {rel_image_path}\")\n"
+        "log_message(f\"\\nProcessamento concluído. Logs salvos em:\")\n",
+        "log_message(f\"- Log completo: {log_filepath}\")\n",
+        "log_message(f\"- Tempos por tamanho: {times_filepath}\")"
       ]
     },
     {
