colab-runner.ipynb novo codigo

--- a/colab-runner.ipynb
+++ b/colab-runner.ipynb
@@ -47,6 +47,36 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import subprocess\n",
+        "import time\n",
+        "from datetime import datetime\n",
+        "from PIL import Image\n",
+        "\n",
+        "# Configuração de diretórios\n",
+        "base_dir = os.getcwd()\n",
+        "exercise_dir = os.path.join(base_dir, \"repositorio\")\n",
+        "build_dir = os.path.join(exercise_dir, \"build\")\n",
+        "input_base_dir = os.path.join(exercise_dir, \"img\", \"ppm\")\n",
+        "output_base_dir = os.path.join(exercise_dir, \"out\")\n",
+        "log_dir = os.path.join(exercise_dir, \"logs\")\n",
+        "\n",
+        "# Encontrar todas as imagens ppm no diretório de entrada\n",
+        "test_images = []\n",
+        "for root, dirs, files in os.walk(input_base_dir):\n",
+        "    for file in files:\n",
+        "        if file.endswith(\".ppm\"):\n",
+        "            full_path = os.path.join(root, file)\n",
+        "            rel_path = os.path.relpath(full_path, input_base_dir)\n",
+        "            test_images.append(rel_path)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "6aeG0AxTWjU6"
@@ -121,7 +151,23 @@
         "with open(times_filepath, 'w') as times_file:\n",
         "    times_file.write(\"Tamanho,Largura,Altura,Tempo(s)\\n\")\n",
         "\n",
-        "# [Restante da configuração inicial igual...]\n",
+        "# Encontrar todas as imagens ppm no diretório de entrada\n",
+        "test_images = []\n",
+        "for root, dirs, files in os.walk(input_base_dir):\n",
+        "    for file in files:\n",
+        "        if file.endswith(\".ppm\"):\n",
+        "            full_path = os.path.join(root, file)\n",
+        "            rel_path = os.path.relpath(full_path, input_base_dir)\n",
+        "            test_images.append(rel_path)\n",
+        "\n",
+        "log_message(f\"Total de imagens encontradas: {len(test_images)}\")\n",
+        "\n",
+        "# Configurações do processamento\n",
+        "exec_path = os.path.join(build_dir, \"fsh_cuda\")\n",
+        "subprocess.run(f\"chmod +x {exec_path}\", shell=True)\n",
+        "p = 0.5          # parâmetro de ruído\n",
+        "stochastic = 1    # usar dithering estocástico\n",
+        "grayscale_flag = \"-g\"  # converter para grayscale\n",
         "\n",
         "# Processar imagens\n",
         "for i, rel_image_path in enumerate(test_images, start=1):\n",
@@ -134,18 +180,32 @@
         "    \n",
         "    log_message(f\"Processando imagem {i}/{len(test_images)}: {rel_image_path} ({size_str})\")\n",
         "    \n",
-        "    # [Restante do processamento igual...]\n",
-        "    \n",
+        "    # Preparar caminho de saída\n",
+        "    output_path = os.path.join(output_base_dir, rel_image_path)\n",
+        "    output_dir = os.path.dirname(output_path)\n",
+        "    os.makedirs(output_dir, exist_ok=True)\n",
+        "\n",
+        "    # Nome do arquivo de saída\n",
+        "    output_path = output_path.replace(\".ppm\", \"_stochastic.ppm\" if stochastic else \".ppm\")\n",
+        "\n",
+        "    # Executar comando\n",
+        "    command = f\"{exec_path} {img_path} {output_path} {p} {stochastic} {grayscale_flag}\"\n",
+        "    result = subprocess.run(\n",
+        "        command, shell=True, cwd=exercise_dir,\n",
+        "        stdout=subprocess.PIPE, stderr=subprocess.PIPE,\n",
+        "        text=True\n",
+        "    )\n",
+        "\n",
         "    # Calcular tempo de execução\n",
         "    execution_time = time.time() - start_time\n",
         "    \n",
         "    # Registrar no log geral\n",
         "    with open(log_filepath, 'a') as log_file:\n",
         "        log_file.write(f\"{rel_image_path};{size_str};{execution_time:.4f}\\n\")\n",
-        "    \n",
+        "\n",
         "    # Registrar no arquivo de tempos por tamanho\n",
         "    log_time_by_size(rel_image_path, dimensions, execution_time)\n",
-        "    \n",
+        "\n",
         "    log_message(f\"Concluído em {execution_time:.2f}s - Tamanho: {size_str}\")\n",
         "\n",
         "log_message(f\"\\nProcessamento concluído. Logs salvos em:\")\n",
