colab-runner.ipynb log detalhado

--- a/colab-runner.ipynb
+++ b/colab-runner.ipynb
@@ -96,6 +96,7 @@
         "import time\n",
         "from datetime import datetime\n",
         "from PIL import Image\n",
+        "import pandas as pd\n",
         "\n",
         "# Configuração de diretórios\n",
         "base_dir = os.getcwd()\n",
@@ -110,16 +111,47 @@
         "os.makedirs(output_base_dir, exist_ok=True)\n",
         "\n",
         "# Arquivos de log\n",
-        "log_filename = f\"execution_log_{datetime.now().strftime('%Y%m%d_%H%M%S')}.txt\"\n",
-        "log_filepath = os.path.join(log_dir, log_filename)\n",
-        "times_filename = f\"execution_times_by_size_{datetime.now().strftime('%Y%m%d_%H%M%S')}.csv\"\n",
-        "times_filepath = os.path.join(log_dir, times_filename)\n",
+        "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+        "log_filepath = os.path.join(log_dir, f\"execution_log_{timestamp}.txt\")\n",
+        "times_filepath = os.path.join(log_dir, f\"execution_times_{timestamp}.csv\")\n",
+        "\n",
+        "# Configurações dos executáveis\n",
+        "executables = [\n",
+        "    {\n",
+        "        \"name\": \"serial_c\",\n",
+        "        \"path\": os.path.join(build_dir, \"fsh_serial_c\"),\n",
+        "        \"command_template\": \"{exec_path} -i {input} -m {method} {grayscale_flag}\",\n",
+        "        \"output_suffix\": \"_serial_c.ppm\",\n",
+        "        \"params\": {\n",
+        "            \"method\": \"floyd-steinberg\"  # ajuste conforme necessário\n",
+        "        }\n",
+        "    },\n",
+        "    {\n",
+        "        \"name\": \"openmp\",\n",
+        "        \"path\": os.path.join(build_dir, \"fsh_omp\"),\n",
+        "        \"command_template\": \"{exec_path} {input} {output} {p} {stochastic} {grayscale_flag}\",\n",
+        "        \"output_suffix\": \"_openmp.ppm\"\n",
+        "    },\n",
+        "    {\n",
+        "        \"name\": \"cuda\",\n",
+        "        \"path\": os.path.join(build_dir, \"fsh_cuda\"),\n",
+        "        \"command_template\": \"{exec_path} {input} {output} {p} {stochastic} {grayscale_flag}\",\n",
+        "        \"output_suffix\": \"_cuda.ppm\"\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "# Parâmetros comuns\n",
+        "common_params = {\n",
+        "    \"p\": 0.5,\n",
+        "    \"stochastic\": 1,\n",
+        "    \"grayscale_flag\": \"-g\"\n",
+        "}\n",
         "\n",
         "# Função para obter dimensões da imagem\n",
         "def get_image_dimensions(image_path):\n",
         "    try:\n",
         "        with Image.open(image_path) as img:\n",
-        "            return img.size  # retorna (width, height)\n",
+        "            return img.size  # (width, height)\n",
         "    except Exception as e:\n",
         "        print(f\"Erro ao obter dimensões de {image_path}: {str(e)}\")\n",
         "        return (0, 0)\n",
@@ -135,82 +167,108 @@
         "    if print_to_console:\n",
         "        print(message)\n",
         "\n",
-        "# Função para registrar tempos por tamanho\n",
-        "def log_time_by_size(image_path, dimensions, execution_time):\n",
-        "    size_str = f\"{dimensions[0]}x{dimensions[1]}\"\n",
-        "    entry = f\"{size_str},{dimensions[0]},{dimensions[1]},{execution_time:.4f}\\n\"\n",
-        "    \n",
-        "    with open(times_filepath, 'a') as times_file:\n",
-        "        times_file.write(entry)\n",
-        "\n",
         "# Inicializar arquivos de log\n",
         "with open(log_filepath, 'w') as log_file:\n",
-        "    log_file.write(\"Log de Execução - Processamento de Imagens\\n\")\n",
+        "    log_file.write(\"Log de Execução - Comparação de Implementações\\n\")\n",
         "    log_file.write(f\"Data: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\\n\\n\")\n",
         "\n",
-        "with open(times_filepath, 'w') as times_file:\n",
-        "    times_file.write(\"Tamanho,Largura,Altura,Tempo(s)\\n\")\n",
+        "# DataFrame para armazenar os tempos\n",
+        "times_data = []\n",
         "\n",
-        "# Encontrar todas as imagens ppm no diretório de entrada\n",
+        "# Encontrar imagens para processar\n",
         "test_images = []\n",
         "for root, dirs, files in os.walk(input_base_dir):\n",
         "    for file in files:\n",
         "        if file.endswith(\".ppm\"):\n",
-        "            full_path = os.path.join(root, file)\n",
-        "            rel_path = os.path.relpath(full_path, input_base_dir)\n",
+        "            rel_path = os.path.relpath(os.path.join(root, file), input_base_dir)\n",
         "            test_images.append(rel_path)\n",
         "\n",
         "log_message(f\"Total de imagens encontradas: {len(test_images)}\")\n",
         "\n",
-        "# Configurações do processamento\n",
-        "exec_path = os.path.join(build_dir, \"fsh_cuda\")\n",
-        "subprocess.run(f\"chmod +x {exec_path}\", shell=True)\n",
-        "p = 0.5          # parâmetro de ruído\n",
-        "stochastic = 1    # usar dithering estocástico\n",
-        "grayscale_flag = \"-g\"  # converter para grayscale\n",
-        "\n",
         "# Processar imagens\n",
         "for i, rel_image_path in enumerate(test_images, start=1):\n",
-        "    start_time = time.time()\n",
         "    img_path = os.path.join(input_base_dir, rel_image_path)\n",
-        "    \n",
-        "    # Obter dimensões da imagem\n",
         "    dimensions = get_image_dimensions(img_path)\n",
         "    size_str = f\"{dimensions[0]}x{dimensions[1]}\"\n",
         "    \n",
-        "    log_message(f\"Processando imagem {i}/{len(test_images)}: {rel_image_path} ({size_str})\")\n",
+        "    log_message(f\"\\nProcessando imagem {i}/{len(test_images)}: {rel_image_path} ({size_str})\")\n",
         "    \n",
-        "    # Preparar caminho de saída\n",
-        "    output_path = os.path.join(output_base_dir, rel_image_path)\n",
-        "    output_dir = os.path.dirname(output_path)\n",
-        "    os.makedirs(output_dir, exist_ok=True)\n",
+        "    for exec_config in executables:\n",
+        "        exec_name = exec_config[\"name\"]\n",
+        "        exec_path = exec_config[\"path\"]\n",
+        "        \n",
+        "        # Criar diretório de saída específico para cada implementação\n",
+        "        output_dir = os.path.join(output_base_dir, exec_name, os.path.dirname(rel_image_path))\n",
+        "        os.makedirs(output_dir, exist_ok=True)\n",
+        "        \n",
+        "        # Nome do arquivo de saída\n",
+        "        output_filename = os.path.basename(rel_image_path).replace(\".ppm\", exec_config[\"output_suffix\"])\n",
+        "        output_path = os.path.join(output_dir, output_filename)\n",
+        "        \n",
+        "        # Preparar parâmetros\n",
+        "        params = {**common_params, **exec_config.get(\"params\", {})}\n",
+        "        params.update({\n",
+        "            \"exec_path\": exec_path,\n",
+        "            \"input\": img_path,\n",
+        "            \"output\": output_path\n",
+        "        })\n",
+        "        \n",
+        "        # Construir comando\n",
+        "        command = exec_config[\"command_template\"].format(**params)\n",
+        "        \n",
+        "        log_message(f\"  Executando {exec_name}...\")\n",
+        "        \n",
+        "        # Executar e medir tempo\n",
+        "        start_time = time.time()\n",
+        "        result = subprocess.run(\n",
+        "            command, shell=True, cwd=exercise_dir,\n",
+        "            stdout=subprocess.PIPE, stderr=subprocess.PIPE,\n",
+        "            text=True\n",
+        "        )\n",
+        "        execution_time = time.time() - start_time\n",
+        "        \n",
+        "        # Registrar resultados\n",
+        "        times_data.append({\n",
+        "            \"Imagem\": rel_image_path,\n",
+        "            \"Largura\": dimensions[0],\n",
+        "            \"Altura\": dimensions[1],\n",
+        "            \"Implementacao\": exec_name,\n",
+        "            \"Tempo(s)\": execution_time,\n",
+        "            \"Output_Path\": output_path\n",
+        "        })\n",
+        "        \n",
+        "        # Log de execução\n",
+        "        if result.returncode != 0:\n",
+        "            log_message(f\"  ERRO em {exec_name}: {result.stderr}\", False)\n",
+        "        else:\n",
+        "            log_message(f\"  {exec_name} concluído em {execution_time:.4f}s\")\n",
         "\n",
-        "    # Nome do arquivo de saída\n",
-        "    output_path = output_path.replace(\".ppm\", \"_stochastic.ppm\" if stochastic else \".ppm\")\n",
+        "# Salvar tempos em CSV\n",
+        "times_df = pd.DataFrame(times_data)\n",
+        "times_df.to_csv(times_filepath, index=False)\n",
         "\n",
-        "    # Executar comando\n",
-        "    command = f\"{exec_path} {img_path} {output_path} {p} {stochastic} {grayscale_flag}\"\n",
-        "    result = subprocess.run(\n",
-        "        command, shell=True, cwd=exercise_dir,\n",
-        "        stdout=subprocess.PIPE, stderr=subprocess.PIPE,\n",
-        "        text=True\n",
-        "    )\n",
+        "# Gerar relatório comparativo\n",
+        "report_df = times_df.groupby(['Implementacao', 'Largura', 'Altura'])['Tempo(s)'].mean().unstack(level=0)\n",
+        "report_filepath = os.path.join(log_dir, f\"performance_report_{timestamp}.txt\")\n",
         "\n",
-        "    # Calcular tempo de execução\n",
-        "    execution_time = time.time() - start_time\n",
+        "with open(report_filepath, 'w') as report_file:\n",
+        "    report_file.write(\"=== TEMPOS DE EXECUÇÃO POR IMPLEMENTAÇÃO ===\\n\")\n",
+        "    report_file.write(report_df.to_string())\n",
         "    \n",
-        "    # Registrar no log geral\n",
-        "    with open(log_filepath, 'a') as log_file:\n",
-        "        log_file.write(f\"{rel_image_path};{size_str};{execution_time:.4f}\\n\")\n",
+        "    # Calcular speedup em relação ao serial C\n",
+        "    if 'serial_c' in report_df.columns:\n",
+        "        speedup_df = report_df.copy()\n",
+        "        for col in speedup_df.columns:\n",
+        "            if col != 'serial_c':\n",
+        "                speedup_df[col] = speedup_df['serial_c'] / speedup_df[col]\n",
+        "        \n",
+        "        report_file.write(\"\\n\\n=== SPEEDUP EM RELAÇÃO AO SERIAL C ===\\n\")\n",
+        "        report_file.write(speedup_df.drop(columns=['serial_c']).to_string())\n",
         "\n",
-        "    # Registrar no arquivo de tempos por tamanho\n",
-        "    log_time_by_size(rel_image_path, dimensions, execution_time)\n",
-        "\n",
-        "    log_message(f\"Concluído em {execution_time:.2f}s - Tamanho: {size_str}\")\n",
-        "\n",
-        "log_message(f\"\\nProcessamento concluído. Logs salvos em:\")\n",
+        "log_message(f\"\\nProcessamento concluído. Resultados salvos em:\")\n",
         "log_message(f\"- Log completo: {log_filepath}\")\n",
-        "log_message(f\"- Tempos por tamanho: {times_filepath}\")"
+        "log_message(f\"- Tempos de execução: {times_filepath}\")\n",
+        "log_message(f\"- Relatório comparativo: {report_filepath}\")"
       ]
     },
     {
