colab-runner.ipynb fix cuda speedup

--- a/colab-runner.ipynb
+++ b/colab-runner.ipynb
@@ -215,25 +215,25 @@
       "source": [
         "def build_project():\n",
         "    \"\"\"Compila o projeto usando CMake e make.\"\"\"\n",
-        "    utils.log_message(\"🔧 Limpando diretório de build...\")\n",
+        "    utils.log_message(\"Limpando diretório de build...\")\n",
         "    utils.run_command(\"cmake -E remove_directory build\")\n",
         "    utils.run_command(\"cmake -E make_directory build\")\n",
         "    \n",
         "    # Executar CMake\n",
-        "    utils.log_message(\"⚙️ Executando CMake...\")\n",
+        "    utils.log_message(\"Executando CMake...\")\n",
         "    cmake_result = utils.run_command(\"cmake ..\", config.build_dir)\n",
         "    utils.log_message(f\"CMAKE STDOUT:\\n{cmake_result.stdout}\", False)\n",
         "    utils.log_message(f\"CMAKE STDERR:\\n{cmake_result.stderr}\", False)\n",
         "    assert cmake_result.returncode == 0, \"Erro na configuração com CMake\"\n",
         "    \n",
         "    # Compilar com make\n",
-        "    utils.log_message(\"🧱 Compilando com make...\")\n",
+        "    utils.log_message(\"Compilando com make...\")\n",
         "    make_result = utils.run_command(\"make -j\", config.build_dir)\n",
         "    utils.log_message(f\"MAKE STDOUT:\\n{make_result.stdout}\", False)\n",
         "    utils.log_message(f\"MAKE STDERR:\\n{make_result.stderr}\", False)\n",
         "    assert make_result.returncode == 0, \"Erro na compilação (make)\"\n",
         "    \n",
-        "    utils.log_message(\"✅ Compilação concluída com sucesso!\")\n",
+        "    utils.log_message(\"Compilação concluída com sucesso!\")\n",
         "\n",
         "# Compilar o projeto\n",
         "build_project()"
@@ -305,8 +305,43 @@
         "                stdout=subprocess.PIPE, stderr=subprocess.PIPE,\n",
         "                text=True\n",
         "            )\n",
-        "            execution_time = time.time() - start_time\n",
-        "            \n",
+        "            # Extrair tempo de execução da saída do programa\n",
+        "            stdout = result.stdout\n",
+        "            execution_time = None\n",
+        "\n",
+        "            if exec_name == \"serial_c\":\n",
+        "                # Exemplo: \"Serial execution time: 96.61 ms\"\n",
+        "                for line in stdout.splitlines():\n",
+        "                    if \"Serial execution time:\" in line:\n",
+        "                        try:\n",
+        "                            ms = float(line.split(\":\")[1].strip().split()[0])\n",
+        "                            execution_time = ms / 1000.0\n",
+        "                        except Exception:\n",
+        "                            pass\n",
+        "            elif exec_name == \"openmp\":\n",
+        "                # Exemplo: \"OpenMP execution time (2 threads): 96.1256 ms\"\n",
+        "                for line in stdout.splitlines():\n",
+        "                    if \"OpenMP execution time\" in line:\n",
+        "                        try:\n",
+        "                            ms = float(line.split(\":\")[1].strip().split()[0])\n",
+        "                            execution_time = ms / 1000.0\n",
+        "                        except Exception:\n",
+        "                            pass\n",
+        "            elif exec_name == \"cuda\":\n",
+        "                # Exemplo: \"CUDA execution time: 1.60691 ms\" ou \"Execution time: 1.66567 ms\"\n",
+        "                for line in stdout.splitlines():\n",
+        "                    if \"CUDA execution time:\" in line or \"Execution time:\" in line:\n",
+        "                        try:\n",
+        "                            ms = float(line.split(\":\")[1].strip().split()[0])\n",
+        "                            execution_time = ms / 1000.0\n",
+        "                        except Exception:\n",
+        "                            pass\n",
+        "            # Fallback: se não encontrou, usa medição de tempo Python\n",
+        "            if execution_time is None:\n",
+        "                execution_time = time.time() - start_time\n",
+        "                print(f\"Falha ao extrair tempo de execução do {exec_name} para a imagem {rel_image_path}. Usando tempo medido em Python: {execution_time:.4f}s\")\n",
+        "\n",
+        "\n",
         "            # Registrar resultados\n",
         "            times_data.append({\n",
         "                \"Imagem\": rel_image_path,\n",
